# socks5-panel

./: .env_example  .gitignore  README.md  copy_release_build_to_target_production_machine.sh  docker-compose.nginx.yml  docker-compose.yml  forward_db.sh  forward_db_prod.sh  self-signed.md
bg_charger/: crontab.example  hourly_billing.py  stop_rental.py
controller/: .gitignore  Cargo.toml  manage_user.py
controller/src/: main.rs
nginx/: nginx.conf
nginx/ssl/: server.crt  server.key
panel/: Cargo.toml
panel/assets/css/: chat.css  platega.css  staff.css  style.css  tos.css
panel/assets/js/: app.js  chat.js  payment_processor.js  platega_payment.js  session_manager.js  staff.js  staff_chat.js
panel/migration/src/: lib.rs  m20260301_201645_user_session_table.rs  m20260301_201657_proxy_server_table.rs  m20260301_202241_rentals_table.rs  m20260306_231234_chat_messages.rs  m20260310_234421_top_ups.rs  m20260324_000000_coupons.rs  m20260326_105608_coupons_r_add_ip_addresses_column.rs
panel/src/: dash.rs  main.rs
panel/src/entities/: chat_message.rs  coupon_redemptions.rs  coupons.rs  mod.rs  prelude.rs  proxy_server.rs  rental.rs  top_ups.rs  user_session.rs
panel/src/routes/: api.rs  auth.rs  controller.rs  coupon.rs  mod.rs  tickets.rs
panel/src/routes/topup/: cryptowrap.rs  mod.rs  payment.rs  platega.rs  trocador.rs
panel/templates/: chat.html  index.html  payment_process.html  staff.html  staff_chat.html  tos.html  transit.html  verify_platega.html
scripts/: coupon_generate.py  requirements.txt
