[package]
name = "c2-dashboard"
version = "1.33.7"
edition = "2024"

[dependencies]
actix = "0.13"
actix-files = "0.6.10"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = "4.13.0"
actix-web-actors = "4"
actix-ws = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros"] }
askama = "0.15.4"
dotenvy = "0.15.7"
env_logger = "0.11.9"
log = "0.4"
sea-orm = { version = "2.0.0-rc.35", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
openssl = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = "1.36"
tg_notify = "1.1.1"
urlencoding = "2.1"
